fixed spacing on nav and removed line from Task Master

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,6 +71,10 @@ select {
 .navbar h1 {
   color: #422ba8;
 }
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
 .navbar .nav-links {
   display: flex;
   align-items: center;
@@ -91,6 +95,11 @@ select {
 .navbar .auth-links a:last-child {
   margin-right: 0;
 }
+#test {
+  margin-left: 10;
+  outline: ;
+}
+
 .navbar a:hover {
   color: #ec26d2;
 }
@@ -109,6 +118,9 @@ select {
 }
 .logout-container button:hover {
   background-color: #da9a95;
+}
+.user-info {
+  margin-left: 27px;
 }
 
 
